# Luminote

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: backend-feature.yml  config.yml  documentation.yml  frontend-component.yml  integration.yml  testing.yml
.github/PULL_REQUEST_TEMPLATE/: copilot-agent-pr.md
.github/agents/: doc-writer.md  refactor-specialist.md  security-reviewer.md  test-specialist.md
.github/instructions/: backend-api.instructions.md  backend-core.instructions.md  backend-services.instructions.md  frontend-components.instructions.md  test-files.instructions.md
.github/workflows/: README.md  backend.yml  ci.yml  copilot-setup-steps.yml  frontend.yml
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: config.py  extract.py  translate.py
backend/app/core/: errors.py  logging.py  storage_schema.py
backend/app/schemas/: __init__.py  config.py  errors.py  extraction.py  templates.py  translation.py  versioning.py
backend/app/services/: __init__.py  caching_service.py  extraction_service.py  template_engine.py  translation_service.py  versioning_service.py
backend/app/services/providers/: __init__.py  anthropic_provider.py  base.py  mock_provider.py  openai_provider.py
backend/data/versions/: cab20117-cd12-46be-a6c4-c562d7389ceb.json
backend/docs/: ERROR_CODES.md
backend/tests/: __init__.py  conftest.py  test_errors.py  test_fixtures.py  test_main.py  utils.py
backend/tests/api/: test_health.py  test_middleware.py
backend/tests/core/: test_errors.py  test_indexeddb_schema.py
backend/tests/e2e/: README.md  __init__.py  test_phase0_workflows.py
backend/tests/fixtures/: blog_post.html  news_article.html  sample_articles.html  technical_doc.html
backend/tests/smoke/: README.md  __init__.py  test_phase0_infrastructure.py
backend/tests/unit/: test_errors.py  test_fixtures.py  test_main.py
backend/tests/unit/api/: test_health.py  test_middleware.py
backend/tests/unit/api/v1/: __init__.py  test_config.py  test_extract.py  test_translate.py  test_translate_stream.py
backend/tests/unit/core/: test_errors.py
backend/tests/unit/services/: test_caching_service.py  test_extraction_service.py  test_template_engine.py  test_translation_service.py  test_versioning_service.py
backend/tests/unit/services/providers/: test_anthropic_provider.py  test_openai_provider.py
docs/: API.md  DEVELOPMENT.md  PROJECT-STATUS.md  atomic-features.md  feature-dependency-analysis.md  feature-specifications.md  implementation-sequence.md  infrastructure-requirements.md  layer-mapping.md  market_research_translation_tools.md  operational-metrics.md
docs/adr/: 001-api-endpoint-structure.md  002-streaming-translation-architecture.md  003-client-side-storage-strategy.md  004-error-handling-patterns.md  005-frontend-state-management.md  README.md
docs/best_practices/: AGENTS-md-best-practices.md  github-copilot-coding-agent-best-practices.md  github-issue-creation-methodology.md  github-readme-best-practices.md  vscode-copilot-custom-agents-best-practices.md
frontend/: .env.example  .gitignore  .prettierignore  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/docs/: ConfigPanel-usage.md  block-hover-highlighting.md  keyboard-shortcuts.md
frontend/src/: app.css
frontend/src/lib/: setup.test.ts  test-setup.ts  test-utils.ts
scripts/: setup-dev.bat  setup-dev.sh
(+45 files in other folders)
