[project]
name = "luminote"
version = "0.1.0"
description = "AI-powered translation and reading comprehension tool"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "GPL-3.0"}
authors = [
  {name = "Luminote Team"}
]
dependencies = [
  "fastapi==0.109.0",
  "uvicorn[standard]==0.27.0",
  "pydantic==2.5.3",
  "pydantic-settings==2.1.0",
  "httpx==0.26.0",
  "python-multipart==0.0.6",
  "openai==1.54.0",
  "anthropic==0.39.0",
  "readability-lxml==0.8.1",
  "beautifulsoup4==4.12.3",
  "lxml==5.1.0"
]

[project.optional-dependencies]
dev = [
  "pytest==7.4.3",
  "pytest-asyncio==0.23.3",
  "pytest-cov==4.1.0",
  "black==23.12.1",
  "ruff==0.1.11",
  "mypy==1.8.0",
  "isort==5.13.2",
  "docformatter==1.7.5"
]

[project.scripts]
luminote = "app.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff]
line-length = 88
target-version = "py312"
select = [
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "F", # pyflakes
  "I", # isort
  "C", # flake8-comprehensions
  "B", # flake8-bugbear
  "UP" # pyupgrade
]
ignore = [
  "E501", # line too long (handled by black)
  "B008", # do not perform function calls in argument defaults
  "C901" # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
  "-v",
  "--strict-markers",
  "--tb=short"
]
markers = [
  "unit: Unit tests",
  "smoke: Smoke tests",
  "e2e: End-to-end tests",
  "integration: Integration tests with real APIs (requires API keys)"
]

[tool.bandit]
# Exclude test files from B101 (assert_used) - asserts are standard in pytest
skips = ["B101"]
exclude_dirs = []
